Add profiles tasks to update worker config playbook

--- a/ansible/playbooks/create-redhat-worker.yaml
+++ b/ansible/playbooks/create-redhat-worker.yaml
@@ -104,6 +104,7 @@
     - import_tasks: ../tasks/jobs.yaml
     - import_tasks: ../tasks/config.yaml
     - import_tasks: ../tasks/image.yaml
+    - import_tasks: ../tasks/profiles.yaml
   roles:
     - name: geerlingguy.swap
       vars:
