--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
@@ -1,48 +1,1 @@
-- hosts: all
-  vars:
-    pkg_retry_count: 5
-    pkg_retry_delay: 30
-  tasks:
-  # Beaker client repository related workarounds
-  - include_tasks: workaround-beaker-client-repo.yaml
-  # DNF5 needs an early workaround
-  - include_tasks: workaround-dnf5.yaml
-  - include_tasks: workaround-almalinux-88.yaml
-  # centos-7, centos-8 and cetos-stream-8 workarounds need to be run before installing RH certs,
-  # otherwise instalation of ca-certificate rpm fail on invalid repos.
-  - include_tasks: workaround-centos-7.yaml
-  - include_tasks: workaround-centos-8.yaml
-  - include_tasks: workaround-centos-stream-8.yaml
-  - include_tasks: workaround-rhel-8.yaml
-  # For accessing internal network resources, certs should be installed early.
-  - name: Install RH certificates
-    include_tasks: install-certs.yaml
-    when:
-      - '"auto-osbuild" not in IMAGE_NAME|lower'
-      - '"composer-api" not in IMAGE_NAME|lower'
-      - '"hardened" not in IMAGE_NAME|lower'
-      - '"image-mode" not in IMAGE_NAME|lower'
-  # Workarounds
-  - include_tasks: workaround-disable-qa-tools.yaml
-  - include_tasks: workaround-beaker-repos.yaml
-  # IT BREAKS PYTHON TEST SUITE, for example, but for RHEL we accept it as it speeds up a lot installability in PSI Openstack
-  # Disabled, as we test in AWS now anyway
-  # - include_tasks: nosync.yaml
-  - include_tasks: install-koji-brew.yaml
-    when:
-      - '"image-mode" not in IMAGE_NAME|lower'
-  - include_tasks: enable-beaker-tasks.yaml
-  - include_tasks: enable-crb.yaml
-  - include_tasks: install-epel.yaml
-  - include_tasks: enable-epel.yaml
-  # Tag repository must be enabled to bring in latest deps which passed gating
-  # https://projects.engineering.redhat.com/browse/TFT-640
-  - include_tasks: tag-repository.yaml
-  # OAMG team needs rhel-extras around
-  - include_tasks: enable-extras.yaml
-  # OSCI users expect buildroot to be enabled by default
-  # https://projects.engineering.redhat.com/browse/TFT-619
-  - include_tasks: enable-buildroot.yaml
-  # TFT-1987 - Hostname on AWS needs to be explicitely set
-  - include_tasks: aws-hostname.yaml
-  - include_tasks: set-timezone.yaml
+- ansible.builtin.import_playbook: testing_farm_profiles.testing_farm.apply
