--- a/tests/worker/public/tmt-container-test-name.yaml
+++ b/tests/worker/public/tmt-container-test-name.yaml
@@ -54,6 +54,7 @@ checks:
        {{ skipped_testsuite_pattern }}
        {{ skipped_testsuite_pattern }}
        {{ skipped_testsuite_pattern }}
+       {{ skipped_testsuite_pattern }}
        <testsuite name="{{ PLAN }}" result="passed" tests="1" stage="complete">
         <logs>
          <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-test-filter{{ '.+' }}{{ PLAN }}/data" name="data"/>
@@ -117,6 +118,7 @@ checks:
        <testsuite name="/check-composes/plan/bci-beaker" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/check-composes/plan/bci-psi-x86_64" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/check-composes/plan/bci-staging-psi-x86_64" tests="0" failures="0" errors="0" skipped="0"/>
+       <testsuite name="/container/build" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/dgoss/build" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/gating/sanity" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/packit/installation" tests="0" failures="0" errors="0" skipped="0"/>
