--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/enable-buildroot.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/enable-buildroot.yaml
@@ -10,6 +10,7 @@
   when:
     - 'ansible_distribution == "RedHat"'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
     - '"image-mode" not in IMAGE_NAME|lower'
@@ -26,6 +27,7 @@
   when:
     - 'ansible_distribution == "RedHat"'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
     - '"image-mode" not in IMAGE_NAME|lower'
@@ -47,6 +49,7 @@
     - 'ansible_distribution == "RedHat"'
     - 'ansible_distribution_major_version | int >= 8'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
     - '"rhui" not in IMAGE_NAME|lower'
