--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/enable-extras.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/enable-extras.yaml
@@ -13,6 +13,7 @@
     - 'ansible_distribution == "RedHat"'
     - 'ansible_distribution_major_version == "7"'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     - '"updates" in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
@@ -32,6 +33,7 @@
     - 'ansible_distribution == "RedHat"'
     - 'ansible_distribution_major_version == "7"'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     - '"updates" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
@@ -45,6 +47,7 @@
     - 'ansible_distribution == "RedHat"'
     - 'ansible_distribution_major_version == "7"'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     - '"updates" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
