--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
@@ -19,6 +19,7 @@
     include_tasks: install-certs.yaml
     when:
       - '"auto-osbuild" not in IMAGE_NAME|lower'
+      - '"pfmt" not in IMAGE_NAME|lower'
       - '"composer-api" not in IMAGE_NAME|lower'
       - '"hardened" not in IMAGE_NAME|lower'
       - '"image-mode" not in IMAGE_NAME|lower'
