--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
@@ -34,6 +34,7 @@
        ansible_distribution == "Rocky"'
     - 'ansible_distribution_major_version | int <= 7'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
     - 'ansible_architecture != "ppc64"'
@@ -63,5 +64,6 @@
        ansible_distribution == "Rocky"'
     - 'ansible_distribution_major_version | int >= 8'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
