--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/workaround-beaker-client-repo.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/workaround-beaker-client-repo.yaml
@@ -44,6 +44,7 @@
   when:
     - beaker_client_repo_file_status.stat.exists
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
 
