--- a/terragrunt/environments/dev/worker-public/citool-config/guest-setup/pre-artifact-installation/workaround-centos-stream-8.yaml
+++ b/terragrunt/environments/dev/worker-public/citool-config/guest-setup/pre-artifact-installation/workaround-centos-stream-8.yaml
@@ -14,5 +14,6 @@
     - 'ansible_distribution_release == "Stream"'
     - "ansible_distribution_major_version | int == 8"
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
