--- a/terragrunt/environments/production/worker-public/citool-config/guest-setup/pre-artifact-installation/install-epel.yaml
+++ b/terragrunt/environments/production/worker-public/citool-config/guest-setup/pre-artifact-installation/install-epel.yaml
@@ -7,6 +7,7 @@
     - 'ansible_distribution == "CentOS"'
     - 'ansible_distribution_major_version | int < 9'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     - '"image-mode" not in IMAGE_NAME|lower'
   retries: "{{ pkg_retry_count }}"
   delay: "{{ pkg_retry_delay }}"
