--- a/terragrunt/environments/production/worker-public/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
+++ b/terragrunt/environments/production/worker-public/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
@@ -10,6 +10,7 @@
        ansible_distribution == "OracleLinux"'
     # we do not want to install Koji on Automotive images
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     # On CentOS Stream 10 we need a worakround
     - 'not (
         ansible_distribution == "CentOS"
