--- a/terragrunt/environments/production/worker-public/citool-config/guest-setup/pre-artifact-installation/workaround-centos-7.yaml
+++ b/terragrunt/environments/production/worker-public/citool-config/guest-setup/pre-artifact-installation/workaround-centos-7.yaml
@@ -13,5 +13,6 @@
     - 'ansible_distribution == "CentOS"'
     - "ansible_distribution_major_version | int == 7"
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
