--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/workaround-almalinux-88.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/workaround-almalinux-88.yaml
@@ -12,5 +12,6 @@
     - 'ansible_distribution == "AlmaLinux"'
     - 'ansible_distribution_version == "8.8"'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
