--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/workaround-centos-8.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/workaround-centos-8.yaml
@@ -43,6 +43,7 @@
     - 'ansible_distribution == "CentOS"'
     - 'ansible_distribution_major_version == "8"'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     # Do not run on CentOS-8-Stream
     - not 'stream' in IMAGE_NAME|lower
     - '"composer-api" not in IMAGE_NAME|lower'
