--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/workaround-disable-qa-tools.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/workaround-disable-qa-tools.yaml
@@ -8,6 +8,7 @@
     - 'ansible_distribution == "RedHat"'
     - 'ansible_distribution_version == "8.1"'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"pfmt" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
   # TODO: this will not work with Beaker, needs more <3
