--- a/terragrunt/environments/staging/worker-public/citool-config/guest-setup/post-artifact-installation/entrypoint.yaml
+++ b/terragrunt/environments/staging/worker-public/citool-config/guest-setup/post-artifact-installation/entrypoint.yaml
@@ -6,5 +6,6 @@
       when:
         - UPDATE_FROM_ARTIFACTS
         - '"auto-osbuild" not in IMAGE_NAME|lower'
+        - '"pfmt" not in IMAGE_NAME|lower'
         - '"ostree" not in IMAGE_NAME|lower'
         - '"image-mode" not in IMAGE_NAME|lower'
