--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -207,7 +207,7 @@ pre-commit:
     # Need to init the modules, or pre-commit terragrunt_validate will fail :(
     - make -j4 dev/init staging/init staging/init/ci production/init
     # Check if no changes after init (replacement for unstable terragrunt_validate pre-commit hook)
-    - "if ! git diff --quiet; then echo 'Error: terragrunt init shows some changes.'; exit 1; fi"
+    - "if ! git diff; then echo 'Error: terragrunt init shows some changes.'; exit 1; fi"
     - pre-commit run --config .pre-commit-config-maintainer.yaml --all-files
   rules:
     - !reference [.rules, not_default_branch]
