--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
@@ -24,6 +24,7 @@
       - '"hardened" not in IMAGE_NAME|lower'
       - '"image-mode" not in IMAGE_NAME|lower'
   # Workarounds
+  - include_tasks: workaround-brew-certificate.yaml
   - include_tasks: workaround-disable-qa-tools.yaml
   - include_tasks: workaround-beaker-repos.yaml
   # IT BREAKS PYTHON TEST SUITE, for example, but for RHEL we accept it as it speeds up a lot installability in PSI Openstack
