tests: fix tests after tests!67
Affected tests:

* `tests/worker/public/tmt-container-test-name.yaml`
* `tests/worker/public/tmt-test-filter-x86_64.yaml`

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/tests/worker/public/tmt-container-test-name.yaml
+++ b/tests/worker/public/tmt-container-test-name.yaml
@@ -55,6 +55,7 @@ checks:
        {{ skipped_testsuite_pattern }}
        {{ skipped_testsuite_pattern }}
        {{ skipped_testsuite_pattern }}
+       {{ skipped_testsuite_pattern }}
        <testsuite name="{{ PLAN }}" result="passed" tests="1" stage="complete">
         <logs>
          <log href="{{ artifacts_url_pattern }}/{{ REQUEST_ID }}/work-test-filter{{ '.+' }}{{ PLAN }}/data" name="data"/>
@@ -121,6 +122,7 @@ checks:
        <testsuite name="/container/build" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/dgoss/build" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/gating/sanity" tests="0" failures="0" errors="0" skipped="0"/>
+       <testsuite name="/image-mode/qcow2/build" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/packit/installation" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/testing-farm/bootc-install" tests="0" failures="0" errors="0" skipped="0"/>
        <testsuite name="/testing-farm/empty" tests="0" failures="0" errors="0" skipped="0"/>
