worker-redhat: do not add beaker tasks for image-mode
We decided to disabled to remove it, see:

https://groups.google.com/a/redhat.com/g/rhel-devel/c/1u8xADPSvcI/m/i5qIMGV7AAAJ

It was already dropped from the image:

https://gitlab.cee.redhat.com/baseos-qe/ansible-baseos-ci/-/merge_requests/9782

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/enable-beaker-tasks.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/enable-beaker-tasks.yaml
@@ -19,3 +19,4 @@
     - '"pfmt" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
     - '"hardened" not in IMAGE_NAME|lower'
+    - '"image-mode" not in IMAGE_NAME|lower'
