guest-setup/workaround-dns: add explicit restorecon
After migrating to standalone python the /etc/resolv.conf's selinux
context is invalid after the copy. We will be investigating further,
for now workaround with an explicit restorecon.

Resolves TFT-4192

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/terragrunt/environments/dev/worker-local/citool-config/guest-setup/pre-artifact-installation/workaround-dns.yaml
+++ b/terragrunt/environments/dev/worker-local/citool-config/guest-setup/pre-artifact-installation/workaround-dns.yaml
@@ -21,4 +21,9 @@
         content: |
           nameserver 8.8.8.8
           nameserver 8.8.4.4
+
+    # explicit restorecon needed - see TFT-4192
+    - name: Restore SELinux context on a file
+      command: restorecon -vF /etc/resolv.conf
+
   when: 'ansible_distribution == "Fedora"'
