Add `update_podman` tag
Useful in some corner cases, like updating container registry
secrets on workers or updating. Do not add it to Makefile, just mention in
README.adoc in case somebody needs it again.

I needed it lately when I was updating secrets.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/playbooks/testing-farm.yaml
+++ b/ansible/playbooks/testing-farm.yaml
@@ -15,6 +15,7 @@
     - import_tasks: ../tasks/ssh-key.yaml
     - import_tasks: ../tasks/artifacts.yaml
     - import_tasks: ../tasks/podman.yaml
+      tags: update_podman
     - import_tasks: ../tasks/jobs.yaml
       tags: update_jobs
     - import_tasks: ../tasks/config.yaml
