redhat-ranch: workaround download.eng.bos.redhat.com EOL
Some of the images are hard to fix, like RHEL-6, workaround it via sed
and use download.devel.redhat.com rather.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
@@ -13,6 +13,8 @@
     pkg_retry_count: 5
     pkg_retry_delay: 30
   tasks:
+  # Workaround download.eng.bos.redhat.com deprecation
+  - include_tasks: workaround-eng-bos.yaml
   # Beaker client repository related workarounds
   - include_tasks: workaround-beaker-client-repo.yaml
   # DNF5 needs an early workaround
