install-python: make it work for RHEL6
Seems old tar and curl cannot survive a few problems:

1. there is a missing `;` causing mkdir to not run properly and seems
   tar can already create dirs on newer releases, but on RHEL6 it fails

```
<root@10.31.15.39> ESTABLISH SSH CONNECTION FOR USER: None
<root@10.31.15.39> SSH: EXEC ssh -o IdentitiesOnly=yes -o StrictHostKeyChecking=no -o 'IdentityFile="/var/home/thrix/.ssh/ci_id_rsa"' -o KbdInteractiveAuthentication=no -o PreferredAuthentications=gssapi-with-mic,gssapi-keyex,hostbased,publickey -o PasswordAuthentication=no -o ConnectTimeout=10 -oHostKeyAlgorithms=+ssh-rsa -oPubkeyAcceptedAlgorithms=+ssh-rsa -tt root@10.31.15.39 'bash -c "set -x
    mkdir -p /var/opt/standalone-python;
    curl '"'"'https://gitlab.com/api/v4/projects/75476709/jobs/artifacts/main/raw/dist/build-x86_64.tar.gz?job=build_cpython%3A%20%5Bx86_64%5D'"'"'\
    | tar -C /var/opt/standalone-python -xzf -"'
<root@10.31.15.39> (2, b"+ curl 'https://gitlab.com/api/v4/projects/75476709/jobs/artifacts/main/raw/dist/build-x86_64.tar.gz?job=build_cpython%3A%20%5Bx86_64%5D '\r\n+ tar -C /var/opt/standalone-python -xzf -\r\n  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\r\n                                 Dload  Upload   Total   Spent    Left  Speed\r\n\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0tar: /var/opt/standalone-python: Cannot chdir: No such file or directory\r\ntar: Error is not recoverable: exiting now\r\n\r  0  127M    0 53439    0     0   127k      0  0:17:05 --:--:--  0:17:05  164k\r\ncurl: (23) Failed writing body (1178 != 1369)\r\n", b'Connection to 10.31.15.39 closed.\r\n')
<root@10.31.15.39> Failed to connect to the host via ssh: Connection to 10.31.15.39 closed.
FAILED - RETRYING: [root@10.31.15.39]: Fetch the custom Python runtime (5 retries left).
```

2. seems the definition of the binaries ends up as two strings, while
   the other one is empty and old curl still trie

--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/install-python.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/install-python.yaml
@@ -18,7 +18,7 @@
 
     - name: Fetch the custom Python runtime
       ansible.builtin.raw: >-
-        bash -c "set -x
+        bash -c "set -x;
             mkdir -p {{ python_install_path }};
             curl '{{ python_bin_url[_uname_arch.stdout.strip()] }}' \
             | tar -C {{ python_install_path }} -xzf -"
