worker-redhat: use yum for RHEL6 and RHEL7
Ansible `package` module is not yet supported on RHEL6,
we will need to roll it out ourselves, they dropped support
for it afaik.

Use `yum` for now to simplify code on RHEL7 also.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/install-certs.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/install-certs.yaml
@@ -15,6 +15,8 @@
   delay: "{{ pkg_retry_delay }}"
   until: result_install_ca is succeeded
   register: result_install_ca
+  # on RHEL6 package modules does not work yet, and these packages are in default install anyway
+  when: not (ansible_distribution == "RedHat" and ansible_distribution_major_version|int == 6)
 
 # https://source.redhat.com/groups/public/identity-access-management/identity__access_management_blog/action_required_removal_of_ca_certs_from_passwordcorpredhatcom
 - name: Download certificates to '/etc/pki/ca-trust/source/anchors/'
