pre-commit: use our fork of gitlab-ci-linter with retries
We are hitting a lot rate limiting to gitlab API in this
gitlab-ci linter. Move to our fork which implements retries:

https://gitlab.com/devopshq/gitlab-ci-linter/-/merge_requests/4

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.pre-commit-config-maintainer.yaml
+++ b/.pre-commit-config-maintainer.yaml
@@ -37,8 +37,8 @@ repos:
     hooks:
       - id: gitleaks
 
-  - repo: https://gitlab.com/devopshq/gitlab-ci-linter
-    rev: v1.0.6
+  - repo: https://gitlab.com/testing-farm/gitlab-ci-linter
+    rev: c3e3ef34b513caf9bf484e4046074e1cd3020379
     hooks:
       - id: gitlab-ci-linter
         args:
