Generate Artemis pool configs from FMF definitions
Replace hand-maintained server.yaml.tftpl pool sections with FMF-based
generation. Each environment (dev/staging/production) has its own FMF
tree under pools/ with hierarchical inheritance to eliminate duplication.

The server.yaml.tftpl is split into a static header
(server-header.yaml.tftpl) and generated pool entries produced by the
generate-artemis-pools tool (exposed as a poetry entry point).

Changes:
- Add setup/generate_pools.py with typer CLI (generate, list-names)
- Add FMF pool definitions for all three environments
- Add generate-artemis-pools poetry entry point
- Add Makefile targets (generate-pools, generate-pools-{dev,staging,production})
- Add pre-commit hook to regenerate pools on .fmf or header changes
- Add fmf dependency to pyproject.toml
- Fix duplicate GPU pool name: fedora-aws-us-east-2b-x86_64-gpu in AZ
  us-east-2c renamed to fedora-aws-us-east-2c-x86_64-gpu

Assisted-by Claude Code

--- a/.pre-commit-config-maintainer.yaml
+++ b/.pre-commit-config-maintainer.yaml
@@ -72,6 +72,16 @@ repos:
           )$
       - id: terragrunt_fmt
 
+  # Generate Artemis pool configs from FMF definitions
+  - repo: local
+    hooks:
+      - id: generate-artemis-pools
+        name: generate-artemis-pools
+        entry: generate-artemis-pools generate --all
+        language: system
+        pass_filenames: false
+        files: (pools/.*\.fmf|server-header\.yaml\.tftpl)$
+
   # Generate Public Ranch compose tests
   - repo: local
     hooks:
