--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,11 +28,13 @@ pytest-gluetool = {git = "https://gitlab.com/testing-farm/pytest-gluetool.git", 
 gluetool = "^2.3"
 yamllint = "^1.29.0"
 gitpython = "^3.1.44"
+fmf = "^1.7.0"
 
 [tool.poetry.scripts]
 terraform-cloud = "setup.terraform_cloud:main"
 github = "setup.github:main"
 gitlab = "setup.gitlab:main"
+generate-artemis-pools = "setup.generate_pools:main"
 
 [tool.poetry.dev-dependencies]
 yamllint = "^1.28.0"
